<resources>
    <string name="app_name">Project1_ChatApp</string>
    <string name="email_txt">Email</string>
    <string name="pass_txt">Password</string>
    <string name="login">Login</string>
    <string name="create_new_acct">Register</string>
    <string name="name_txt">Name</string>
    <string name="register">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="no_acct_txt">Don\'t have an account?</string>
    <string name="existing_acct_txt">Already have an account?</string>
    <string name="forgot_password_txt">Forgot your password?</string>
    <string name="password_reset_txt">Reset</string>
    <string name="first_name_txt">First Name:</string>
    <string name="last_name_txt">Last Name:</string>
    <string name="logout_txt">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_chatrooms_txt">My Chatrooms</string>
    <string name="all_chatrooms_txt">All Chatrooms</string>
    <string name="city_txt">City:</string>
    <string name="choose_gender_txt">Gender:</string>
    <string name="female_txt">Female</string>
    <string name="male_txt">Male</string>
    <string name="save_txt">Save</string>
    <string name="join_txt">Join</string>
    <string name="chatroom_name_txt">Chatroom name</string>
    <string name="create_txt">Create</string>
    <string name="back_txt">Back</string>
    <string name="user_details_txt">User Details</string>
    <string name="leave_txt">Leave</string>
    <string name="write_msg_txt">Write your message</string>
    <string name="one_like_txt">1 Like | </string>
</resources>